--- a/front-end/admin/show.html
+++ b/front-end/admin/show.html
@@ -23,30 +23,42 @@
   .btn-del{background:var(--danger);color:#fff;border:none;border-radius:10px;padding:10px 14px;cursor:pointer}
   select{padding:8px 10px;border-radius:10px;border:1px solid var(--border);background:#fff;font-weight:600}
   .board{margin-top:12px;background:var(--card);border:1px solid var(--border);border-radius:12px;box-shadow:var(--glow)}
-  .chart-container{position:relative;height:380px;width:100%;max-width:980px;margin:8px auto}
+
+  /* header ให้อยู่บรรทัดเดียว: h2 ซ้าย / chip+select ขวา */
+  .board-header{display:flex;align-items:center;justify-content:space-between;padding:12px 16px 0}
+  .board-header h2{margin:0;font-size:18px}
+  .right-group{display:flex;align-items:center;gap:12px}
   .muted{color:var(--muted);margin:0 16px 8px}
-  @media(max-width:720px){.chart-container{height:300px}}
+  .chart-container{position:relative;height:380px;width:100%;max-width:980px;margin:8px auto}
+  @media(max-width:720px){
+    .chart-container{height:300px}
+    .right-group{flex-wrap:wrap;justify-content:flex-end}
+  }
 </style>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4"></script>
 </head>
 <body>
 <div class="wrap">
-  <h1>ระบบหลังบ้าน - จำนวนการ Check-in ต่อบูธ (status = IN)</h1>
+  <h1>ระบบหลังบ้าน - จำนวนผู้เข้าร่วมงาน</h1>
 
   <div class="info-bar">
-    <div class="chip">✅ เช็กอิน (IN): <span id="totalIn">—</span></div>
-    <div class="chip">🧩 บูธทั้งหมด: <span id="totalBooths">—</span></div>
-    <div class="chip">🧾 genqrcode ทั้งหมด: <span id="totalGenQR">—</span></div>
-    <div class="chip">📅 วันที่ในข้อมูล: <span id="selectedDateText">—</span></div>
-    <select id="dateSelect"></select>
-    <div class="chip clock" id="clock">--:--:--</div>
+    <div class="chip">🧾 ผู้ได้รับคิวอาร์โค้ดทั้งหมด: <span id="totalGenQR">—</span> คน</div>
+    <div class="chip">✅ ลงทะเบียนเเล้ว: <span id="totalIn">—</span> คน</div>
+    <div class="chip">🧩 บูธทั้งหมด: <span id="totalBooths">—</span> ฐาน</div>
+    <div class="chip clock" id="clock"> </div>
     <button class="btn-del" id="btnLogout">Logout</button>
   </div>
 
   <div class="board">
-    <h2 style="padding:12px 16px 0;margin:0">จำนวน “ครั้ง” ที่ Check-in (status = IN) แยกตามชื่อบูธ</h2>
-    <p class="muted">* ใช้ข้อมูลวันที่เลือก โดยอ้างอิงจากคอลัมน์ <b>checkin_time</b> ในตาราง <b>checkins</b></p>
+    <div class="board-header">
+      <h2>จำนวนผู้เข้าร่วมงาน แยกตามชื่อบูธ</h2>
+      <div class="right-group">
+        <div class="chip">📅 วันที่ในข้อมูล: <span id="selectedDateText">—</span></div>
+        <select id="dateSelect"></select>
+      </div>
+    </div>
+    <p class="muted" id="subtitle">แสดงข้อมูลตามวันที่เลือก</p>
     <div class="chart-container"><canvas id="chart"></canvas></div>
   </div>
 </div>
@@ -60,6 +72,9 @@ const tz = "Asia/Bangkok";
 const fmtFull = new Intl.DateTimeFormat("th-TH",{dateStyle:"medium",timeStyle:"medium",hour12:false,timeZone:tz});
 const fmtDateTH = new Intl.DateTimeFormat("th-TH",{dateStyle:"medium",timeZone:tz});
 
+/* 👇 เปลี่ยนให้ตรงกับคอลัมน์เวลาในตาราง genqrcode (เช่น created_at / issued_at) */
+const GENQR_TIME_COL = "created_at";
+
 /* ===== ELEMENTS ===== */
 const elClock=document.getElementById("clock");
 const elTotalIn=document.getElementById("totalIn");
@@ -67,16 +82,16 @@ const elTotalBooths=document.getElementById("totalBooths");
 const elTotalGenQR=document.getElementById("totalGenQR");
 const elDateSelect=document.getElementById("dateSelect");
 const elDateText=document.getElementById("selectedDateText");
+const elSubtitle=document.getElementById("subtitle");
 const btnLogout=document.getElementById("btnLogout");
 const canvas=document.getElementById("chart");
 let chart;
 
-/* ===== CLOCK (วัน+เวลาแบบไทย) ===== */
+/* ===== CLOCK (วัน+เวลาไทย) ===== */
 function tick(){ elClock.textContent = fmtFull.format(new Date()); }
-tick();
-setInterval(tick,1000);
+tick(); setInterval(tick,1000);
 
-/* ===== HELPER ===== */
+/* ===== HELPERS ===== */
 function normalizeBoothName(s){
   if(!s) return "(ไม่ระบุฐาน)";
   return s.trim().replace(/\s+/g," ").toLowerCase();
@@ -85,42 +100,69 @@ function toLocalDateOnly(iso){
   const d=new Date(iso);
   return d.toLocaleDateString("en-CA",{timeZone:tz}); // yyyy-MM-dd
 }
+function dayBounds(dateStr){
+  const start = new Date(dateStr+"T00:00:00+07:00").toISOString();
+  const end = new Date(new Date(dateStr+"T00:00:00+07:00").getTime()+86400000).toISOString();
+  return [start,end];
+}
 
-/* ===== GENQRCODE SUMMARY ===== */
-async function loadGenQR(){
-  const { count } = await supabase.from("genqrcode").select("id",{count:"exact",head:true});
+/* ===== GENQRCODE SUMMARY (ตามวันที่/ทั้งหมด) ===== */
+async function loadGenQR(dateStr){
+  let q = supabase.from("genqrcode").select("id",{count:"exact",head:true});
+  if(dateStr && dateStr!=="ALL"){
+    const [start,end] = dayBounds(dateStr);
+    q = q.gte(GENQR_TIME_COL,start).lt(GENQR_TIME_COL,end);
+  }
+  const { count, error } = await q;
+  if(error){ console.warn("โหลด genqrcode ไม่สำเร็จ:", error.message); }
   elTotalGenQR.textContent = count ?? "—";
 }
 
-/* ===== LOAD DATES FROM checkins ===== */
+/* ===== โหลดรายการวันที่จาก checkins (เพิ่ม 'ทั้งหมด') ===== */
 async function loadAvailableDates(){
-  const { data, error } = await supabase.from("checkins").select("checkin_time").order("checkin_time",{ascending:true});
-  if(error){alert("โหลด checkin_time ไม่ได้: "+error.message);return [];}
-  const set=new Set();
-  for(const r of data){ if(r.checkin_time) set.add(toLocalDateOnly(r.checkin_time)); }
-  const list=[...set].sort();
-  elDateSelect.innerHTML=list.map(d=>`<option value="${d}">${fmtDateTH.format(new Date(d))}</option>`).join("");
-  return list;
-}
-
-/* ===== LOAD CHART ===== */
-async function loadChartByDate(dateStr){
-  await loadGenQR();
-  if(!dateStr) return;
-  elDateText.textContent = fmtDateTH.format(new Date(dateStr));
-
-  const start = new Date(dateStr+"T00:00:00+07:00").toISOString();
-  const end = new Date(new Date(dateStr+"T00:00:00+07:00").getTime()+86400000).toISOString();
-
   const { data, error } = await supabase
     .from("checkins")
-    .select("booth,status,checkin_time")
-    .eq("status","IN")
-    .gte("checkin_time", start)
-    .lt("checkin_time", end)
-    .range(0,99999);
+    .select("checkin_time")
+    .order("checkin_time",{ascending:true});
 
-  if(error){alert("โหลด checkins ไม่สำเร็จ: "+error.message);return;}
+  if(error){ alert("โหลด checkin_time ไม่ได้: "+error.message); return []; }
+
+  const set=new Set();
+  for(const r of data){ if(r.checkin_time) set.add(toLocalDateOnly(r.checkin_time)); }
+  const list=[...set].sort();                // yyyy-MM-dd
+  const options = ['ALL', ...list];          // ใส่ “ทั้งหมด” ไว้หัวรายการ
+
+  elDateSelect.innerHTML = options.map(d=>{
+    const label = (d==='ALL') ? "ทั้งหมด" : fmtDateTH.format(new Date(d));
+    return `<option value="${d}">${label}</option>`;
+  }).join("");
+
+  return options;
+}
+
+/* ===== โหลดกราฟตามวัน (หรือทั้งหมด) ===== */
+async function loadChartByDate(dateStr){
+  // label ด้านบน
+  elDateText.textContent = (dateStr==="ALL") ? "ทั้งหมด" : fmtDateTH.format(new Date(dateStr));
+  elSubtitle.textContent = (dateStr==="ALL") ? "แสดงข้อมูลทั้งหมด" : "แสดงข้อมูลตามวันที่เลือก";
+
+  // ผู้ได้รับคิวอาร์โค้ดทั้งหมด (genqrcode) ให้เป็นตามตัวเลือก
+  await loadGenQR(dateStr);
+
+  // ดึง checkins
+  let q = supabase
+    .from("checkins")
+    .select("booth,status,checkin_time")
+    .eq("status","IN");
+  if(dateStr && dateStr!=="ALL"){
+    const [start,end] = dayBounds(dateStr);
+    q = q.gte("checkin_time", start).lt("checkin_time", end);
+  }
+
+  const { data, error } = await q.range(0,99999);
+  if(error){ alert("โหลด checkins ไม่สำเร็จ: "+error.message); return; }
+
+  // รวมข้อมูลตามบูธ
   const map=new Map();
   for(const r of data){
     const booth=(r.booth?.trim()||"(ไม่ระบุฐาน)");
@@ -131,8 +173,11 @@ async function loadChartByDate(dateStr){
     o.count++;
   }
 
+  // ตัวเลขรวม
   elTotalIn.textContent=data.length||0;
   elTotalBooths.textContent=map.size;
+
+  // เตรียมข้อมูลกราฟ
   const pairs=[...map.entries()].map(([norm,v])=>{
     let label=[...v.names].sort((a,b)=>a.length-b.length)[0];
     if(v.names.size>1) label+=" *";
@@ -141,10 +186,12 @@ async function loadChartByDate(dateStr){
 
   const labels=pairs.map(p=>p.booth);
   const values=pairs.map(p=>p.count);
+
+  // วาดกราฟ
   if(chart) chart.destroy();
   chart=new Chart(canvas,{
     type:"bar",
-    data:{labels,datasets:[{label:"จำนวนครั้งที่ Check-in (status=IN)",data:values,
+    data:{labels,datasets:[{label:"จำนวนคนที่ Check-in ",data:values,
                             backgroundColor:"rgba(37,99,235,.75)",borderRadius:8}]},
     options:{responsive:true,maintainAspectRatio:false,
       scales:{y:{beginAtZero:true,ticks:{stepSize:1}},x:{ticks:{autoSkip:false}}}}
@@ -156,11 +203,12 @@ btnLogout.onclick=()=>{location.href="signin.html";};
 elDateSelect.onchange=()=>loadChartByDate(elDateSelect.value);
 
 (async()=>{
-  const dates = await loadAvailableDates();
-  if(dates.length){
-    elDateSelect.value = dates[dates.length-1]; // default = ล่าสุด
-    loadChartByDate(dates[dates.length-1]);
-  }
+  const options = await loadAvailableDates();       // ['ALL', ...dates]
+  // ค่าเริ่มต้น: ถ้ามีวันที่ให้เลือก เลือก “ล่าสุด”; ถ้าไม่มี ใช้ “ทั้งหมด”
+  let defaultVal = "ALL";
+  if(options.length > 1){ defaultVal = options[options.length-1]; } // ตัวท้ายสุดคือวันที่ล่าสุด
+  elDateSelect.value = defaultVal;
+  loadChartByDate(defaultVal);
 })();
 </script>
 </body>
